--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -4,20 +4,59 @@
 		<div id="projects_slideshow">
 			<div id="projects_slidecontainer">
 				<div class="projects_slide">
-					<p>content 1</p>
+					<div class="projects_slidecontent">
+						<div class="projects_mainpic" id="projects_mainpic1"></div>
+						<div class="projects_maintext">
+							<h1>DE-MOLE-LISH!</h1>
+						</div>
+					</div>
 				</div>
 				<div class="projects_slide">
-					<p>content 2</p>
+					<div class="projects_slidecontent">
+						<div class="projects_mainpic" id="projects_mainpic2"></div>
+						<div class="projects_maintext">
+							<h1>Four Lokomotion</h1>
+							<p>
+								Four Lokomotion, from Embedded Systems Design course, is an embedded arcade 
+								gaming device with a user-controlled, quad-screen interface. 
+								It's a gaming device with four independent screens that form a 
+								rectangular parallelepiped. Four Lokomotion allows the 
+								player to jump from a screen to another with the game states maintained,
+								introducing the new paradigm for the gaming platforms.
+							</p>
+						</div>
+						<a class="projects_popuplink">Watch Video</a>
+						<div class="popupWindow round" style="width: 700px; height: 550px;">
+							<div class="popupWindowContent">
+								<h1>Video</h1>
+								<iframe width="640px" height="360px" 
+												src="http://www.youtube.com/embed/gUjO8b0RTHk" 
+												frameborder="0" allowfullscreen>
+								</iframe>
+							</div>
+						</div>
+						<a class="projects_popuplink">More Pictures</a>
+						<div class="popupWindow round" style="width: 700px; height: 550px;">
+							<p>Pictures</p>
+						</div>
+						<a class="projects_popuplink">More Description</a>
+						<div class="popupWindow round" style="width: 700px; height: 550px;">
+							<p>Description</p>
+						</div>
+						<div id="popupBackground"></div>
+					</div>
 				</div>
 				<div class="projects_slide">
-					<p>content 3</p>
+					<div class="projects_slidecontent">
+						<p>content 3</p>
+					</div>
 				</div>
 			</div>
 			<div id="projects_statusbar">
 				<div id="projects_statusbarinner">
-					<a class="projects_status" id="slide1">slide1</a>
-					<a class="projects_status" id="slide2">slide2</a>
-					<a class="projects_status" id="slide3">slide3</a>
+					<a class="projects_status round_small" id="slide1">slide1</a>
+					<a class="projects_status round_small" id="slide2">slide2</a>
+					<a class="projects_status round_small" id="slide3">slide3</a>
 				</div>
 			</div>
 		</div>
