--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -26,21 +26,22 @@
 							</p>
 						</div>
 						<a class="projects_popuplink">Watch Video</a>
-						<div class="popupWindow round" style="width: 700px; height: 550px;">
+						<div class="popupWindow round" style="width: 700px; height: 500px;">
 							<div class="popupWindowContent">
 								<h1>Video</h1>
 								<iframe width="640px" height="360px" 
 												src="http://www.youtube.com/embed/gUjO8b0RTHk" 
 												frameborder="0" allowfullscreen>
 								</iframe>
+								<div class="popupClose">Close</div>
 							</div>
 						</div>
 						<a class="projects_popuplink">More Pictures</a>
-						<div class="popupWindow round" style="width: 700px; height: 550px;">
+						<div class="popupWindow round" style="width: 700px; height: 480px;">
 							<p>Pictures</p>
 						</div>
 						<a class="projects_popuplink">More Description</a>
-						<div class="popupWindow round" style="width: 700px; height: 550px;">
+						<div class="popupWindow round" style="width: 700px; height: 480px;">
 							<p>Description</p>
 						</div>
 						<div id="popupBackground"></div>
