--- a/app/views/layouts/_javascripts_projects.html.erb
+++ b/app/views/layouts/_javascripts_projects.html.erb
@@ -129,16 +129,16 @@
 
 			$("#popupBackground").click(function() {
 				if (popupStatus == 1) {
-					$("#popupBackground").fadeOut("slow");
-					$(".popupWindow").fadeOut("slow");
+					$("#popupBackground").hide();
+					$(".popupWindow").hide();
 					popupStatus = 0;
 				}
 			});
 			
 			$(".popupClose").click(function() {
 				if (popupStatus == 1) {
-					$("#popupBackground").fadeOut("slow");
-					$(".popupWindow").fadeOut("slow");
+					$("#popupBackground").hide();
+					$(".popupWindow").hide();
 					popupStatus = 0;
 				}
 			});
