--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -33,7 +33,7 @@
 												src="http://www.youtube.com/embed/gUjO8b0RTHk" 
 												frameborder="0" allowfullscreen>
 								</iframe>
-								<div class="popupClose">Close</div>
+								<!--<div class="popupClose">Close</div>-->
 							</div>
 						</div>
 						<a class="projects_popuplink">More Pictures</a>
