changed video code

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -29,11 +29,8 @@
 						<div class="popupWindow round" style="width: 700px; height: 500px;">
 							<div class="popupWindowContent">
 								<h1>Video</h1>
-								<iframe width="640px" height="360px" 
-												src="http://www.youtube.com/embed/gUjO8b0RTHk" 
-												frameborder="0" allowfullscreen>
-								</iframe>
-								<!--<div class="popupClose">Close</div>-->
+								<object width="640" height="360"><param name="movie" value="http://www.youtube.com/v/gUjO8b0RTHk?version=3&amp;hl=en_US"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/gUjO8b0RTHk?version=3&amp;hl=en_US" type="application/x-shockwave-flash" width="640" height="360" allowscriptaccess="always" allowfullscreen="true"></embed></object> 
+								<div class="popupClose">Close</div>
 							</div>
 						</div>
 						<a class="projects_popuplink">More Pictures</a>
