--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -25,7 +25,12 @@
 							<td class="fit">Minor in Computer Science</td>
 						</tr>
 						<tr>
-							<td class="fit indent">Overall GPA: 3.92/4.00</td>
+							<td class="fit indent more_margin">Overall GPA: 3.92/4.00</td>
+						</tr>
+						<tr>
+							<td class="fit"><b>Korean Minjok Leadership Academy</b> Gangwon, Korea</td>
+						</tr>
+							<td class="fit indent">Overall GPA: 4.53/5.00</td>
 						</tr>
 					</table>
 				</a>
@@ -47,7 +52,7 @@
 						<tr>
 							<td class="fit top_align more_margin"><b>Programming Languages</b></td>
 							<td class="more_margin">C/Objective-C/C++/C#, Java, Assembly, 
-									OpenGL, Verilog, Ruby</td>
+									OpenGL, Verilog</td>
 						</tr>
 						<tr>
 							<td class="fit top_align more_margin"><b>Applications</b></td>
