--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -28,7 +28,7 @@
 							<td class="fit indent more_margin">Overall GPA: 3.92/4.00</td>
 						</tr>
 						<tr>
-							<td class="fit"><b>Korean Minjok Leadership Academy</b> Gangwon, Korea</td>
+							<td class="fit"><b>Korean Minjok Leadership Academy</b></td>
 						</tr>
 							<td class="fit indent">Overall GPA: 4.53/5.00</td>
 						</tr>
