--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -11,7 +11,7 @@
 							<th>Education</th>
 						</tr>
 						<tr>
-							<td class="fit"><b>Carnegie Mellon University</b> Pittsburgh, PA</td>
+							<td colspan="2" class="fit"><b>Carnegie Mellon University</b> Pittsburgh, PA</td>
 						</tr>
 						<tr>
 							<td class="fit">M.S. in Electrical and Computer Engineering</td>
@@ -28,7 +28,7 @@
 							<td class="fit indent more_margin">Overall GPA: 3.92/4.00</td>
 						</tr>
 						<tr>
-							<td class="fit"><b>Korean Minjok Leadership Academy</b></td>
+							<td colspan="2" class="fit"><b>Korean Minjok Leadership Academy</b> Gangwon, Korea</td>
 						</tr>
 							<td class="fit indent">Overall GPA: 4.53/5.00</td>
 						</tr>
